# nndr-toolkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml
data/pushup/: README.md  raw_samples_Pushup_duo_27Dec2025..csv
docs/: index.md
examples/: 01_analyze_your_data.py  02_rolling_window.py  03_reproduce_benchmark.py
src/nndr/: __init__.py  benchmark.py  core.py  generator.py  methods.py  observables.py  plotting.py  reduce2d.py  ridge.py  simulate.py  utils.py  validation.py
tests/: test_core_api.py  test_methods.py  test_reduce2d.py  test_validation.py
