[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nndr-toolkit"
version = "1.0.0"
description = "Infer non-normal amplification geometry from multivariate time series (NNDR)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "V. R. Saiprasad" },
    { name = "D. Sornette" },
    { name = "V. Troude" },
]
keywords = [
    "non-normal dynamics",
    "transient amplification",
    "multivariate time series",
    "reduced response geometry",
    "directional inference",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
# Benchmarking and plotting (reproduce the paper's synthetic validation)
benchmark = [
    "pandas>=1.3",
    "matplotlib>=3.4",
]
# Development and testing
dev = [
    "pytest>=7.0",
    "pandas>=1.3",
    "matplotlib>=3.4",
]

[project.urls]
Homepage = "https://github.com/Saiprasad-V-R/nndr-toolkit"
Repository = "https://github.com/Saiprasad-V-R/nndr-toolkit"
Issues = "https://github.com/Saiprasad-V-R/nndr-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nndr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
